Small updates on index.html

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <p>Welcome to this little library :)<br /><br />
 
 
-  <s>-----></s> Click here to see our complete list of books</p>
+<a href="https://gabrielles-library.herokuapp.com/books">Click here to see our complete list of books</a></p>
 </body>
 
 </html>
